--- a/app/src/main/res/layout/content_rectangle_calculator.xml
+++ b/app/src/main/res/layout/content_rectangle_calculator.xml
@@ -16,104 +16,88 @@
 
     <EditText
             android:id="@+id/txtWidth"
-            android:layout_width="220dp"
+            android:layout_width="@dimen/entry_column_width"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="@dimen/column_gap"
             android:inputType="numberDecimal"
-            android:hint="Enter width value"/>
+            android:hint="@string/hint_width"/>
 
     <TextView
             android:id="@+id/lblWidth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Width"
+            android:text="@string/label_width"
             android:textSize="20sp"
             android:layout_alignBottom="@id/txtWidth"
             android:layout_toLeftOf="@id/txtWidth"/>
 
     <EditText
             android:id="@+id/txtHeight"
-            android:layout_width="220dp"
+            android:layout_width="@dimen/entry_column_width"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="@dimen/column_gap"
             android:layout_below="@+id/txtWidth"
             android:layout_alignParentRight="true"
             android:inputType="numberDecimal"
-            android:hint="Enter height value"/>
+            android:hint="@string/hint_height"/>
 
     <TextView
             android:id="@+id/lblHeight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Height"
+            android:text="@string/label_height"
             android:textSize="20sp"
             android:layout_alignBottom="@id/txtHeight"
             android:layout_toLeftOf="@id/txtHeight"/>
 
     <TextView
             android:id="@+id/lblUnitSelection"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Select Unit"
+            android:text="@string/prompt_unit"
             android:textSize="20sp"
             android:layout_marginTop="25dp"
             android:textAlignment="textEnd"
             android:layout_below="@+id/lblHeight"
-            android:layout_alignLeft="@+id/lblPermimeter"
-            android:layout_alignStart="@+id/lblPermimeter"/>
+            android:layout_alignRight="@+id/lblHeight"
+            android:layout_alignEnd="@+id/lblHeight"/>
 
     <Spinner
             android:id="@+id/spinner_units"
-            android:layout_width="100sp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="textEnd"
             android:layout_alignTop="@+id/lblUnitSelection"
             android:layout_toRightOf="@+id/lblUnitSelection"
             android:layout_toEndOf="@+id/lblUnitSelection"
             android:layout_marginLeft="12dp"
-            android:layout_marginStart="12dp"/>
-
-    <TextView
-            android:id="@+id/lblPermimeterValue"
-            android:layout_below="@id/spinner_units"
-            android:layout_alignParentRight="true"
-            android:layout_width="220dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:layout_marginLeft="20dp"
-            android:text=""
-            android:textSize="20sp"/>
+            android:layout_marginStart="12dp"
+            android:prompt="@string/prompt_unit"
+            android:entries="@array/unit_type_array"
+            android:descendantFocusability="blocksDescendants"/>
 
     <TextView
             android:id="@+id/lblPermimeter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Perimeter"
-            android:textSize="20sp"
-            android:layout_alignBottom="@id/lblPermimeterValue"
-            android:layout_toLeftOf="@id/lblPermimeterValue"/>
-
-    <TextView
-            android:id="@+id/lblAreaValue"
-            android:layout_below="@id/lblPermimeterValue"
-            android:layout_alignParentRight="true"
-            android:layout_width="220dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:layout_marginLeft="20dp"
+            android:layout_centerHorizontal="true"
             android:text=""
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:layout_below="@id/spinner_units"
+            android:layout_marginTop="25dp"/>
+
 
     <TextView
             android:id="@+id/lblArea"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Area"
+            android:layout_below="@id/lblPermimeter"
+            android:layout_centerHorizontal="true"
+            android:text=""
             android:textSize="20sp"
-            android:layout_alignBottom="@id/lblAreaValue"
-            android:layout_toLeftOf="@id/lblAreaValue"/>
+            android:layout_marginTop="25dp"/>
 
 </RelativeLayout>
