--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="entry_column_width">190dp</dimen>
+    <dimen name="label_font_size">20dp</dimen>
+    <dimen name="column_gap">20dp</dimen>
 </resources>
